syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


option java_multiple_files = true;
package app.pokermonitor;

service Pokermonitor {

  rpc createGame(google.protobuf.Empty) returns (GameInfo);

  rpc joinGame(JoinGameRequest) returns (google.protobuf.BoolValue);

  rpc listPlayers(GameInfo) returns (stream google.protobuf.StringValue);

}

message GameInfo {
  string id = 1;
}

message JoinGameRequest {
  string name = 1;
  string gameId = 2;
}